Java/1course/OOP/3_4_hours__2_topic/examples/E8.java
public class E8 {
    public static void main(String[] args) {
        E7 myObj = new E7();
        myObj.name = "John";  // error
        System.out.println(myObj.name); // error 
    }
}